--- a/config/web.conf
+++ b/config/web.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name wordpress.localhost;
+    server_name wordpress.edujedi.com.br;
 
     root /var/www/html/wordpress;
     index index.php index.html index.htm;
@@ -14,7 +14,7 @@ server {
 
     location ~ \.php$ {
         include snippets/fastcgi-php.conf;
-        fastcgi_pass unix:/var/run/php/php8.1-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php8.3-fpm.sock;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
