--- a/compose.yaml
+++ b/compose.yaml
@@ -12,6 +12,8 @@ services:
       WORDPRESS_DB_NAME: exampledb
     volumes:
       - wordpress:/var/www/html
+    depends_on: 
+      - db    
 
   db:
     image: mysql:8.0
