Atualizando descrição .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 DB_NAME=exampledb
 DB_USER=exampleuser
 DB_PASSWORD=examplepass
-DB_HOST=db
+DB_HOST=db #Não é necessário alterar o DB HOST a não ser que tenha a intenção de utilizar outro banco de dados.
