--- a/config/web.conf
+++ b/config/web.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name wordpress.edujedi.com.br;
+    server_name localhost;
 
     root /var/www/html/wordpress;
     index index.php index.html index.htm;
