Revert "Update composer.json"
This reverts commit 40d0b94f3c522b202a9510381d2103f8727940e5.

--- a/config/composer.json
+++ b/config/composer.json
@@ -1,12 +1,12 @@
 {
-  "name": "alexnascimento/wp",
+  "name": "ericlbarnes/wp",
   "require": {
     "vlucas/phpdotenv": "^2.2"
   },
   "authors": [
     {
-      "name": "Alex Nascimento",
-      "email": "alexnascimento@examplo.com"
+      "name": "Alex",
+      "email": "alex@mysite.com"
     }
   ]
 }
