--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,10 @@ jobs:
       -
       - name: pull
         run: git pull
-      - 
+      - name: sleep
+        run: sleep 300
+        shell: bash
+      -  
         name: Checkout
         uses: actions/checkout@v4
       -
