--- a/config/web.conf
+++ b/config/web.conf
@@ -7,6 +7,11 @@ server {
 
     access_log /var/log/nginx/example.com.access.log;
     error_log /var/log/nginx/example.com.error.log;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    ssl_certificate /etc/letsencrypt/live/wordpress.edujedi.com.br/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/wordpress.edujedi.com.br/privkey.pem;
+
 
     location / {
         try_files $uri $uri/ /index.php?$query_string;
